button11/style.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");

:root {
  --base-clr: #11121a;
  --line-clr: #42434a;
  --hover-clr: #222533;
  --text-clr: #e6e6ef;
  --accent-clr: #5e63ff;
  --secondary-text-clr: #b0b3c1;
}

* {
  margin: 0;
  padding: 0;
}

html {
  font-family: Poppins, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  line-height: 1.5rem;
}

body {
  min-height: 100vh;
  min-height: 100dvh;
  background-color: var(--base-clr);
  color: var(--text-clr);
  display: grid;
  grid-template-columns: auto 1fr;
}

#sidebar {
  box-sizing: border-box;
  height: 100vh;
  width: 250px;
  padding: 5px 1em;
  background-color: var(--base-clr);
  border-right: 1px solid var(--line-clr);

  position: sticky;
  top: 0;
  align-self: start;
  transition: 300ms ease-in-out;
  overflow: hidden;
}

#sidebar.close {
  padding: 5px;
  width: 60px;
}

#sidebar ul {
  list-style-type: none;
}

#sidebar > ul > li:first-child {
  display: flex;
  justify-content: flex-end;
  margin-bottom: 16px;
}

#sidebar > ul > li:first-child .logo {
  font-weight: 600;
}

#sidebar ul li.active a{
  color: var(--accent-clr);
}

#sidebar ul li.active a svg {
  fill: var(--accent-clr);
}

#sidebar a, #sidebar .dropdown-btn, #sidebar .logo{
  border-radius:5em ;
  padding: .85em;
  text-decoration: none;
  color: var(--text-clr);
  display: flex;
  align-items: center;
  gap: 1em;
}

.dropdown-btn {
  width: 100%;
  text-align: left;
  background: none;
  border: none;
  font: inherit;
  cursor: pointer;
}

#sidebar svg{
  flex-shrink: 0;
  fill: var(--text-clr);
}

#sidebar a span, #sidebar .dropdown-btn span{
  flex-grow: 1;
}

#sidebar a:hover, #sidebar .dropdown-btn:hover{
  background-color: var(--hover-clr);
}

#sidebar .sub-menu{
  display: grid;
  grid-template-rows: 0fr;
  transition: 300ms ease-in-out;
}

#sidebar .sub-menu .div {
  overflow: hidden;
}

#sidebar .sub-menu.show{
  grid-template-rows: 1fr;
}

.dropdown-btn svg {
  transition: All 0.3s ease-in-out;
}

.rotate svg:last-child {
  rotate: 180deg;
}

#sidebar .sub-menu a{
  padding-left: 2em;
}

#toggle-btn{
  margin-left: auto;
  padding: 1em;
  border: none;
  border-radius: .5em;
  background: none;
  cursor: pointer;
}

#toggle-btn svg{
  transition: rotate 150ms ease;
}

#toggle-btn:hover{
  background-color: var(--hover-clr);
}

main {
  padding: min(30px, 7%);
}

